2008-12-21  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: use devpay if the user token property is
	  given; otherwise, regular S3
	* installcheck/Amanda_Device.pl: adjust tests to correspond

2008-12-19  Nikolas Coukouma <atrus@zmanda.com>, Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c, device-src/s3.h:
	  Reset read and write when retrying a failed request

2008-12-19  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Device.pl: if SSL is not supported, don't try
	  to test the SSL_CA_INFO property

2008-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c (holding_get_file_chunks): Set fullpaths to 1.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Don't free 'rc'.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml: Improve documentation of regex.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (anonymous_value): New prototype.
	* common-src/conffile.c (anonymous_value): New function.
	* common-src/conffile.c: Use anonymous_value.
	* server-src/diskfile.c: Use anonymous_value.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Fix infinite loop.
	* perl/Amanda/Application/Zfs.pm: Fix for freebsd.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Run script only if todo is set.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amfetchdump.pl: chdir() before rmtree().

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amarchiver.pl: chdir() before rmtree().

2008-12-17  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amgtar.8.xml: atime_preserve -> atime-preserve
	* installcheck/pp-scripts.pl: add atime-preserve property

2008-12-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xslt/html.xsl.in: add <div class="refentry" /> for the benefit